--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
   </head>
   <body>
+    <!--Top part-->
     <header class="flex-container">
       <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png" alt="Logo">
       <nav>
@@ -13,6 +14,7 @@
         <span><a href="locations">Locations</a></span>
       </nav>
     </header>
+    <!--Main part-->
     <div class="main">
       <div id="mission" class="flex-container">
         <div class="content">
@@ -23,7 +25,7 @@
       <div id="featuredtea">
         <h2>Tea of the Month</h2>
         <h4>What's Steeping at The Tea Cozy?</h4>
-        <div class="flex-container units">
+        <div class="flex-container">
           <div class="unit">
             <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg" alt="A cup with berries">
             <span>Fall Berry Blitz Tea</span>
@@ -75,6 +77,7 @@
       <h5>contact@theteacozy.com</h5>
       <h5>917-555-8904</h5>
     </div>
+    <!--Bottom part-->
     <footer>
       <h5>copyright The Tea Cozy 2017</h5>
     </footer>
